--- a/readme.Rmd
+++ b/readme.Rmd
@@ -125,7 +125,7 @@ g <- ggplot(percent_long, aes(timepoint, percentage, group = Tissue)) + geom_poi
 g
 ```
 
-Again the injection site has the highest amount of the LNP. The next most prominent site of LNP accumulation is the liver (about 15-20% of the total LNPs at later time points). It makes sense that large quantities would end up in the liver as it plays a role in de-toxifying blood (and because of its size it would not feature prominently in the concentration plot). But what I found most interesting was the fact that even the injection site was primarily in the 20-30% range. So where are the rest of the LNPs? Astute observers would notice that the list of tissues is shorter in this plot than in the previous. Much of those missing tissues have empty values for percentage of original dose, which in a footnote defines as "Not applicable, partial tissue taken". It appears then that the percentage values were only calculated for whole pieces of tissue. I am uncertain how they could then do multi-timepoint whole tissue/organ values but that could just be me not being familiar with the technique.
+Again the injection site has the highest amount of the LNP. The next most prominent site of LNP accumulation is the liver (about 15-20% of the total LNPs at later time points). It makes sense that large quantities would end up in the liver as it plays a role in de-toxifying blood from what appear to be a foreign substance. But what I found most interesting was the fact that even the injection site was primarily in the 20-30% range. So where are the rest of the LNPs? Astute observers would notice that the list of tissues is shorter in this plot than in the previous. Much of those missing tissues have empty values for percentage of original dose, which in a footnote defines as "Not applicable, partial tissue taken". It appears then that the percentage values were only calculated for whole pieces of tissue. I am uncertain how they could then do multi-timepoint whole tissue/organ values but that could just be me not being familiar with the technique.
 
 Taking the table as presented and summarizing the percentage data then we can get the following:
 
